<resources>
    <string name="app_name">GreenArcade</string>
    <string name="tv_itemNo">Item No</string>
    <string name="tv_orderId">Order Id</string>
    <string name="tv_qty">quantity</string>
    <string name="tv_price">Price</string>
    <string name="tv_itemD">veg2000</string>
    <string name="tv_tbDispatch">To be dispatched</string>
    <string name="ck_tbDispatched" />
    <string name="tv_dispatch">Dispatched</string>
    <string name="ck_dispatch" />
    <string name="btn_sellerAdd">Seller Address</string>
    <string name="btn_buyerAdd">Buyer Address</string>
    <string name="btn_track">Track Order</string>
    <string name="tv_head">Checkout</string>
    <string name="tv_seller">Seller</string>
    <string name="tv_sellerName" />
    <string name="tv_prodName">Carrot</string>
    <string name="tv_quantity">250kg</string>
    <string name="tv_Price">LKR 700</string>
    <string name="rb_storePickup">Store PickUp</string>
    <string name="rb_delCashOn">Cash on delivery</string>
    <string name="tv_msgToSeller">Message to seller</string>
    <string name="et_msgSeller">Enter message</string>
    <string name="tv_DeliverAdd">Deliver To</string>
    <string name="et_DeliverAdd">Enter address</string>
    <string name="tv_subTot">Sub Total</string>
    <string name="tv_subTotDis">RS.xxxxx</string>
    <string name="et_voucher">Enter code</string>
    <string name="btn_apply">Apply</string>
    <string name="tv_total">Total:</string>
    <string name="tv_totalShow">Rs.xxxxx</string>
    <string name="btn_proceed">Proceed to pay</string>
    <string name="tv_delQuantity">250Kg</string>
    <string name="tv_BorderId">order1200</string>
    <string name="tv_DelorderId">order1200</string>
    <string name="tv_delQty">250Kg</string>
    <string name="tv_delPrice">LKR 700</string>
    <string name="et_userEmail">Enter email</string>
    <string name="tv_UserName">Enter name</string>
    <string name="tv_telephone">Enter telephone number</string>
    <string name="tv_address">Enter Address</string>
    <string name="tv_sNotice">Enter special notice</string>
    <string name="et_name">Enter name</string>
    <string name="et_tel">Enter telephone number</string>
    <string name="et_address">Enter address</string>
    <string name="et_sNotice">Special notice</string>
    <string name="tv_topic">Delivery Details</string>
    <string name="et_email">Enter email</string>
    <string name="btn_deliveryDetails">Delivery Details</string>
    <string name="btn_add">Save</string>
    <string name="btn_update">Update</string>
    <string name="tv_orderReview">Order Review</string>
    <string name="tv_orderIdTrack">Order Id</string>
    <string name="tv_amount">Amount</string>
    <string name="tv_currentStatus">Current status</string>
    <string name="tv_disOrderId" />
    <string name="tv_trackAmount" />
    <string name="tv_trackStatus" />
    <string name="rb_toBedispatched">To be dispatched</string>
    <string name="rb_dispatched">Dispatched</string>
    <string name="tv_orNumber">Enter contact number</string>
    <string name="btn_orSubmit">Submit</string>
    <string name="et_orTel">"Enter contact number "</string>
    <string name="tv_sellBuyerTel">Enter contact number of customer</string>
    <string name="tv_orderStatSellerheader">Update order status</string>
    <string name="et_trackTel">Enter buyers contact number</string>
    <string name="btn_trackSave">Save</string>


</resources>