<?xml version="1.0" encoding="utf-8"?>
<ScrollView android:layout_height="match_parent"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"

    <androidx.constraintlayout.widget.ConstraintLayout

        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        tools:context=".Checkout">


        <LinearLayout
            android:id="@+id/ly_details"
            android:layout_width="385dp"
            android:layout_height="108dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="16dp"
            android:orientation="vertical"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_sellerName">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="horizontal">

                    <ImageView
                        android:id="@+id/img_carrot"
                        android:layout_width="156dp"
                        android:layout_height="wrap_content"
                        android:src="@drawable/carrot" />

                    <LinearLayout
                        android:layout_width="168dp"
                        android:layout_height="match_parent"
                        android:orientation="vertical">

                        <TextView
                            android:id="@+id/tv_prodName"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="@string/tv_prodName" />

                        <TextView
                            android:id="@+id/tv_DelorderId"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="@string/tv_quantity" />
                    </LinearLayout>

                    <TextView
                        android:id="@+id/tv_delQty"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="@string/tv_Price" />
                </LinearLayout>
            </LinearLayout>
        </LinearLayout>

        <TextView
            android:id="@+id/tv_seller"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="48dp"
            android:text="@string/tv_seller"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_head" />

        <TextView
            android:id="@+id/tv_head"
            android:layout_width="177dp"
            android:layout_height="43dp"
            android:layout_marginTop="32dp"
            android:fontFamily="sans-serif-smallcaps"
            android:text="@string/tv_head"
            android:textSize="30sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/tv_sellerName"
            android:layout_width="138dp"
            android:layout_height="25dp"
            android:layout_marginStart="16dp"
            android:text="@string/tv_sellerName"
            app:layout_constraintBaseline_toBaselineOf="@+id/tv_seller"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.155"
            app:layout_constraintStart_toEndOf="@+id/tv_seller" />

        <RadioGroup
            android:id="@+id/rb_group"
            android:layout_width="266dp"
            android:layout_height="111dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/ly_details">

            <RadioButton
                android:id="@+id/rb_storePickup"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/rb_storePickup" />

            <RadioButton
                android:id="@+id/rb_delCashOn"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/rb_delCashOn" />
        </RadioGroup>

        <TextView
            android:id="@+id/tv_subTot"
            android:layout_width="96dp"
            android:layout_height="33dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:text="@string/tv_subTot"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/btn_deliveryDetails" />

        <TextView
            android:id="@+id/tv_subTotDis"
            android:layout_width="110dp"
            android:layout_height="34dp"
            android:layout_marginStart="88dp"
            android:text="@string/tv_subTotDis"
            app:layout_constraintBaseline_toBaselineOf="@+id/tv_subTot"
            app:layout_constraintStart_toEndOf="@+id/tv_subTot" />

        <TextView
            android:id="@+id/tv_total"
            android:layout_width="78dp"
            android:layout_height="28dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:text="@string/tv_total"
            android:textSize="16sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_subTot" />

        <TextView
            android:id="@+id/tv_totalShow"
            android:layout_width="74dp"
            android:layout_height="26dp"
            android:layout_marginStart="16dp"
            android:text="@string/tv_totalShow"
            android:textSize="16sp"
            app:layout_constraintBaseline_toBaselineOf="@+id/tv_total"
            app:layout_constraintStart_toEndOf="@+id/tv_total" />

        <Button
            android:id="@+id/btn_proceed"
            android:layout_width="169dp"
            android:layout_height="48dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="16dp"
            android:layout_marginBottom="16dp"
            android:background="@drawable/custom_button"
            android:backgroundTint="#10D618"
            android:text="@string/btn_proceed"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.538"
            app:layout_constraintStart_toEndOf="@+id/tv_totalShow"
            app:layout_constraintTop_toBottomOf="@+id/tv_subTotDis" />

        <Button
            android:id="@+id/btn_deliveryDetails"
            android:layout_width="370dp"
            android:layout_height="58dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="16dp"
            android:backgroundTint="#E1D7D7"
            android:drawableEnd="@drawable/forward"
            android:text="@string/btn_deliveryDetails"
            android:textAlignment="viewStart"
            android:textColor="#191313"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/rb_group" />


    </androidx.constraintlayout.widget.ConstraintLayout>


</ScrollView>
