<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/img_carrot"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".DeliveryDetailsSeller">

    <ImageView
        android:id="@+id/img_carrot"
        android:layout_width="185dp"
        android:layout_height="162dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/carrot" />

    <TextView
        android:id="@+id/tv_itemNo"
        android:layout_width="64dp"
        android:layout_height="27dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="32dp"
        android:text="@string/tv_itemNo"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/img_carrot" />

    <TextView
        android:id="@+id/tv_orderId"
        android:layout_width="64dp"
        android:layout_height="27dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:text="@string/tv_orderId"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_itemNo" />

    <TextView
        android:id="@+id/tv_qty"
        android:layout_width="64dp"
        android:layout_height="27dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:text="@string/tv_qty"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_orderId" />

    <TextView
        android:id="@+id/tv_price"
        android:layout_width="64dp"
        android:layout_height="27dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:text="@string/tv_price"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_qty" />

    <TextView
        android:id="@+id/tv_itemD"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:text="@string/tv_itemD"
        app:layout_constraintBaseline_toBaselineOf="@+id/tv_itemNo"
        app:layout_constraintStart_toEndOf="@+id/tv_itemNo" />

    <TextView
        android:id="@+id/tv_quantity"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:text="TextView"
        app:layout_constraintBaseline_toBaselineOf="@+id/tv_orderId"
        app:layout_constraintStart_toEndOf="@+id/tv_orderId" />

    <TextView
        android:id="@+id/tv_Price"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:text="TextView"
        app:layout_constraintBaseline_toBaselineOf="@+id/tv_qty"
        app:layout_constraintStart_toEndOf="@+id/tv_qty" />

    <TextView
        android:id="@+id/textView10"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:text="TextView"
        app:layout_constraintBaseline_toBaselineOf="@+id/tv_price"
        app:layout_constraintStart_toEndOf="@+id/tv_price" />

    <TextView
        android:id="@+id/tv_tbDispatch"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="48dp"
        android:text="@string/tv_tbDispatch"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_price" />

    <CheckBox
        android:id="@+id/ck_tbDispatched"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:text="@string/ck_tbDispatched"
        app:layout_constraintBaseline_toBaselineOf="@+id/tv_tbDispatch"
        app:layout_constraintStart_toEndOf="@+id/tv_tbDispatch" />

    <TextView
        android:id="@+id/tv_dispatch"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="32dp"
        android:text="@string/tv_dispatch"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_tbDispatch" />

    <CheckBox
        android:id="@+id/ck_dispatch"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="68dp"
        android:text="@string/ck_dispatch"
        app:layout_constraintBaseline_toBaselineOf="@+id/tv_dispatch"
        app:layout_constraintStart_toEndOf="@+id/tv_dispatch" />


</androidx.constraintlayout.widget.ConstraintLayout>