<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".DeliveryDetailsBuyer">

    <ImageView
        android:id="@+id/img_carrot"
        android:layout_width="185dp"
        android:layout_height="162dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/carrot" />

    <TextView
        android:id="@+id/tv_itemNo"
        android:layout_width="114dp"
        android:layout_height="45dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:text="@string/tv_itemNo"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView" />

    <TextView
        android:id="@+id/tv_orderId"
        android:layout_width="114dp"
        android:layout_height="45dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:text="@string/tv_orderId"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_itemNo" />

    <TextView
        android:id="@+id/tv_qty"
        android:layout_width="114dp"
        android:layout_height="45dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:text="@string/tv_qty"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_orderId" />

    <TextView
        android:id="@+id/tv_price"
        android:layout_width="114dp"
        android:layout_height="45dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:text="@string/tv_price"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_qty" />

    <TextView
        android:id="@+id/tv_itemD"
        android:layout_width="152dp"
        android:layout_height="40dp"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:fontFamily="@font/arimo"
        android:text="@string/tv_itemD"
        app:layout_constraintBaseline_toBaselineOf="@+id/tv_itemNo"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.62"
        app:layout_constraintStart_toEndOf="@+id/tv_itemNo" />

    <Button
        android:id="@+id/btn_buyerAdd"
        android:layout_width="218dp"
        android:layout_height="75dp"
        android:layout_marginTop="16dp"
        android:backgroundTint="#E1CC13"
        android:text="@string/btn_buyerAdd"
        android:textSize="14sp"
        app:layout_constraintBottom_toTopOf="@+id/btn_track"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_price" />

    <Button
        android:id="@+id/btn_track"
        android:layout_width="203dp"
        android:layout_height="71dp"
        android:layout_marginTop="16dp"
        android:backgroundTint="#F36C42"
        android:text="@string/btn_track"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btn_buyerAdd" />

    <TextView
        android:id="@+id/tv_BorderId"
        android:layout_width="152dp"
        android:layout_height="40dp"
        android:layout_marginStart="76dp"
        android:fontFamily="@font/arimo"
        android:text="@string/tv_BorderId"
        android:textSize="16sp"
        app:layout_constraintBaseline_toBaselineOf="@+id/tv_orderId"
        app:layout_constraintStart_toEndOf="@+id/tv_orderId" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="114dp"
        android:layout_height="45dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="52dp"
        android:text="TextView"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/img_carrot" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="152dp"
        android:layout_height="40dp"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:text="TextView"
        app:layout_constraintBaseline_toBaselineOf="@+id/textView"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.618"
        app:layout_constraintStart_toEndOf="@+id/textView" />

</androidx.constraintlayout.widget.ConstraintLayout>